# McVineGPU

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
IntersectionPoint/: Intersect.cu  Intersect.cuh  Ray.hpp  Test  makefile  test.cpp
bash/: README.md  build.sh  clean_build.sh  clean_run.sh  clean_test.sh  clean_test_run.sh  run.sh  test.sh  test_run.sh
cuda/: AbstractScatterer.cu  Beam.cu  Box.cu  ConstantQEScatterer.cu  CudaDriver.cu  Cylinder.cu  Intersect.cu  Intersect.cuh  IntersectKernels.cu  IsotropicScatterer.cu  Kernels.cu  Pyramid.cu  ScatteringKernels.cu  Sphere.cu  UtilKernels.cu
include/: AbstractScatterer.hpp  AbstractShape.hpp  Beam.hpp  Box.hpp  ConstantQEScatterer.hpp  CudaDriver.hpp  Cylinder.hpp  Error.hpp  Intersect.hpp  IntersectKernels.hpp  IsotropicScatterer.hpp  Kernels.hpp  MpiRunner.hpp  Pyramid.hpp  Ray.hpp  ScatteringKernels.hpp  Shape.hpp  Sphere.hpp  Structs.hpp  SystemVars.hpp  UtilKernels.hpp  Vec3.hpp
python/: cudaGraph.py  datahist.py  ratioGraph.py  speedGraph.py  timingGraph.py
src/: AbstractShape.cpp  MpiRunner.cpp  Structs.cpp  main.cpp  test.cpp
test/: CMakeLists.txt  README.md  main.cpp  run_tests.cpp  test_kernels.cu  test_kernels.hpp  tests.cu  tests.hpp
test/gtest/: test_AbsScatterer.cpp  test_Beam.cpp  test_Intersect.cpp  test_IsoScatterer.cpp  test_Ray.cpp  test_Scattering.cpp  test_Shapes.cpp  test_Util.cpp  test_Vec3.cpp
test/include/: AbstractScattererWrapper.hpp  IntersectWrapper.hpp  IsoScattererWrapper.hpp  ScatteringWrapper.hpp  ShapeWrapper.hpp  UtilWrapper.hpp
test/src/: IntersectWrapper.cu  ScatteringWrapper.cu  ShapeWrapper.cu  UtilWrapper.cu
test_separate_compilation/: main.cpp  mylib.cu  run.sh  test  test.cu
